--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ button {
     <span class="nav-title">Intramurals SY 2025-2026</span>
     <div class="nav-links">
         <a href="index.html">Sign Up</a>
-        <a href="#">Team Checker</a>
+        <a href="teamchecker.html">Team Checker</a>
         <a href="#">Players</a>
     </div>
 </nav>
@@ -133,4 +133,5 @@ button {
     <py-script src="main.py"></py-script>
 </div>
 </body>
+
 </html>
