--- a/index.html
+++ b/index.html
@@ -14,37 +14,53 @@
     <script type="module" src="https://pyscript.net/releases/2025.7.3/core.js"></script>
 
     <title>Project</title>
+
 <style>
+
+
 body {
     margin: 0;
     font-family: "Grandstander", cursive;
-    background-color: #111;
+    min-height: 100vh;
+
     display: flex;
     justify-content: center;
-    align-items: flex-start;
-    padding-top: 100px;
-    min-height: 100vh;
-    box-sizing: border-box;
+    align-items: center;
+
+    background-color: #111;
 }
+
+
 nav {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 70px;
+
     display: flex;
     justify-content: space-between;
     align-items: center;
+
     padding: 0 20px;
+    box-sizing: border-box;
+
     background: linear-gradient(90deg, #512525 0%, #ff1493 100%);
     box-shadow: 0 4px 8px rgba(0,0,0,0.4);
     z-index: 1000;
 }
+
+.nav-title {
+    color: white;
+    font-weight: bold;
+}
+
 .nav-links {
     display: flex;
     gap: 12px;
     flex-wrap: wrap;
 }
+
 .nav-links a {
     white-space: nowrap;
     font-size: 14px;
@@ -56,36 +72,48 @@ nav {
     background-color: rgba(27,27,27,0.6);
     transition: background-color 0.3s, color 0.3s;
 }
+
 .nav-links a:hover {
     background-color: #ff69b4;
     color: #111;
 }
+
+
 .container {
     background-color: #1b1b1b;
     padding: 30px 35px;
     border-radius: 12px;
     width: 340px;
     border: 1px solid #ff69b4;
-    text-align: center;
+
     display: flex;
     flex-direction: column;
     justify-content: center;
+    text-align: center;
+
+    box-sizing: border-box;
 }
+
+
 h1 {
     margin: 0 0 20px 0;
     color: #ff69b4;
     font-size: 28px;
 }
+
+
 .form {
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
+
 label {
     color: #ddd;
     font-size: 14px;
     text-align: left;
 }
+
 input {
     padding: 8px;
     border-radius: 6px;
@@ -94,6 +122,7 @@ input {
     color: white;
     font-family: "Grandstander", cursive;
 }
+
 button {
     margin-top: 12px;
     padding: 10px;
@@ -104,14 +133,18 @@ button {
     font-weight: bold;
     cursor: pointer;
 }
+
 #output {
     margin-top: 12px;
     color: #ffb6d9;
     font-size: 14px;
 }
+
 </style>
 </head>
+
 <body>
+
 <nav>
     <span class="nav-title">Intramurals SY 2025-2026</span>
     <div class="nav-links">
@@ -120,18 +153,24 @@ button {
         <a href="#">Players</a>
     </div>
 </nav>
+
 <div class="container" id="signup">
     <h1>Create Account</h1>
+
     <div class="form">
         <label>Username:</label>
         <input type="text" id="username">
+
         <label>Password:</label>
         <input type="password" id="password">
+
         <button py-click="account_authenticator">Create Account</button>
+
         <p id="output"></p>
     </div>
+
     <py-script src="main.py"></py-script>
 </div>
-</body>
 
+</body>
 </html>
