--- a/intramsplayers.html
+++ b/intramsplayers.html
@@ -4,7 +4,6 @@
     
     <link rel="stylesheet" href="https://pyscript.net/releases/2025.7.3/core.css">
     <script type="module" src="https://pyscript.net/releases/2025.7.3/core.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,10 +14,10 @@
         body{
         color: white;
         background-color: #1b1b1b;
-        text-align: center;
         font-family: "Grandstander", cursive;
         font-style: normal;
         padding: 75px;
+        text-align: center;
         }
         input, h1, label{ 
             color: #ff69b4;
@@ -32,6 +31,7 @@
             color: #111;
             font-weight: bold;
             cursor: pointer;
+            color: white;
         }
         h1{
             padding: 5px;
@@ -48,10 +48,79 @@
             margin: auto;
             border-radius: 13px;
             border: 1px solid #ff69b4;
+            text-align: center;
+        }
+        nav {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 70px;
 
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+            padding: 0 20px;
+            box-sizing: border-box;
+
+            background: linear-gradient(90deg, #512525 0%, #ff1493 100%);
+            box-shadow: 0 4px 8px rgba(0,0,0,0.4);
+            z-index: 1000;
+        }
+
+        .nav-title {
+            color: white;
+            font-weight: bold;
+        }
+
+        .nav-links {
+            display: flex;
+            gap: 12px;
+            flex-wrap: wrap;
+        }
+
+        .nav-links a {
+            white-space: nowrap;
+            font-size: 14px;
+            color: #fff;
+            text-decoration: none;
+            font-weight: bold;
+            padding: 8px 16px;
+            border-radius: 6px;
+            background-color: rgba(27,27,27,0.6);
+            transition: background-color 0.3s, color 0.3s;
+        }
+
+        .nav-links a:hover {
+            background-color: #ff69b4;
+            color: #111;
+        }
+        .container {
+            background-color: #1b1b1b;
+            padding: 30px 35px;
+            border-radius: 12px;
+            width: 340px;
+            border: 1px solid #ff69b4;
+
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            text-align: center;
+
+            box-sizing: border-box;
         }
     </style>
 <body>
+
+    <nav>
+        <span class="nav-title">Intramurals SY 2025-2026</span>
+        <div class="nav-links">
+            <a href="index.html">Sign Up</a>
+            <a href="teamchecker.html">Team Checker</a>
+            <a href="intramsplayers.html">Players</a>
+        </div>
+    </nav>
 
     <h1>Intramurals Players:</h1>
 
