--- a/teamchecker.html
+++ b/teamchecker.html
@@ -48,10 +48,78 @@
             margin: auto;
             border-radius: 13px;
             border: 1px solid #ff69b4;
+        }
+        nav {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 70px;
 
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+            padding: 0 20px;
+            box-sizing: border-box;
+
+            background: linear-gradient(90deg, #512525 0%, #ff1493 100%);
+            box-shadow: 0 4px 8px rgba(0,0,0,0.4);
+            z-index: 1000;
+        }
+
+        .nav-title {
+            color: white;
+            font-weight: bold;
+        }
+
+        .nav-links {
+            display: flex;
+            gap: 12px;
+            flex-wrap: wrap;
+        }
+
+        .nav-links a {
+            white-space: nowrap;
+            font-size: 14px;
+            color: #fff;
+            text-decoration: none;
+            font-weight: bold;
+            padding: 8px 16px;
+            border-radius: 6px;
+            background-color: rgba(27,27,27,0.6);
+            transition: background-color 0.3s, color 0.3s;
+        }
+
+        .nav-links a:hover {
+            background-color: #ff69b4;
+            color: #111;
+        }
+        .container {
+            background-color: #1b1b1b;
+            padding: 30px 35px;
+            border-radius: 12px;
+            width: 340px;
+            border: 1px solid #ff69b4;
+
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            text-align: center;
+
+            box-sizing: border-box;
         }
     </style>
 <body>
+
+    <nav>
+        <span class="nav-title">Intramurals SY 2025-2026</span>
+        <div class="nav-links">
+            <a href="index.html">Sign Up</a>
+            <a href="teamchecker.html">Team Checker</a>
+            <a href="intramsplayers.html">Players</a>
+        </div>
+    </nav>
 
     <h1>Intramurals Team Checker</h1>
 
