--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ button {
     <div class="nav-links">
         <a href="index.html">Sign Up</a>
         <a href="teamchecker.html">Team Checker</a>
-        <a href="intramsplayers.html">Players</a>
+        <a href="intramsplayer.html">Players</a>
     </div>
 </nav>
 
@@ -174,4 +174,3 @@ button {
 
 </body>
 </html>
-
