--- a/intramsplayers.html
+++ b/intramsplayers.html
@@ -17,6 +17,7 @@
         font-family: "Grandstander", cursive;
         font-style: normal;
         padding: 75px;
+        padding-top: 110px;
         text-align: center;
         }
         input, h1, label{ 
@@ -131,3 +132,4 @@
     <py-script src="intramsplayers.py"></py-script>
 </body>
 </html>
+
