--- a/teamchecker.html
+++ b/teamchecker.html
@@ -19,6 +19,7 @@
         font-family: "Grandstander", cursive;
         font-style: normal;
         padding: 75px;
+        padding-top: 110px;
         }
         input, h1, label{ 
             color: #ff69b4;
@@ -157,3 +158,4 @@
     <py-script src="teamchecker.py"></py-script>
 </body>
 </html>
+
