--- a/index.html
+++ b/index.html
@@ -139,6 +139,18 @@ button {
     color: #ffb6d9;
     font-size: 14px;
 }
+    
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    padding: 10px 0;
+    background-color: #111;
+    color: #ff69b4;
+    font-size: 14px;
+    border-top: 1px solid #ff69b4;
+}
 
 </style>
 </head>
@@ -168,10 +180,14 @@ button {
 
         <p id="output"></p>
     </div>
+    <footer>
+    Atasha Ko & Tessa Aseo | 10-Sapphire
+</footer>
 
     <py-script src="main.py"></py-script>
 </div>
 
 </body>
 </html>
+
 
