--- a/index.html
+++ b/index.html
@@ -141,15 +141,10 @@ button {
 }
     
 footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    text-align: center;
-    padding: 10px 0;
-    background-color: #111;
+    margin-top: 25px;
     color: #ff69b4;
     font-size: 14px;
-    border-top: 1px solid #ff69b4;
+    text-align: center;
 }
 
 </style>
@@ -189,5 +184,6 @@ footer {
 
 </body>
 </html>
+
 
 
