--- a/intramsplayers.html
+++ b/intramsplayers.html
@@ -110,6 +110,13 @@
 
             box-sizing: border-box;
         }
+        footer {
+            margin-top: 25px;
+            color: #ff69b4;
+            font-size: 14px;
+            text-align: center;
+        }
+
     </style>
 <body>
 
@@ -127,9 +134,13 @@
     <input type="button" id='button' py-click="intramsplayers" value="Click here">
 
     <br><div id="output"></div>
+        <footer>
+    Atasha Ko & Tessa Aseo | 10-Sapphire
+</footer>
 
     <py-script src="intramsplayers.py"></py-script>
 </body>
 </html>
+
 
 
