--- a/teamchecker.html
+++ b/teamchecker.html
@@ -109,6 +109,12 @@
 
             box-sizing: border-box;
         }
+        footer {
+    margin-top: 25px;
+    color: #ff69b4;
+    font-size: 14px;
+    text-align: center;
+}
     </style>
 <body>
 
@@ -153,9 +159,13 @@
     </div>
 
     <br><div id="output"></div>
+        <footer>
+    Atasha Ko & Tessa Aseo | 10-Sapphire
+</footer>
 
     <py-script src="teamchecker.py"></py-script>
 </body>
 </html>
+
 
 
