--- a/intramsplayers.html
+++ b/intramsplayers.html
@@ -110,12 +110,17 @@
 
             box-sizing: border-box;
         }
-        footer {
-            margin-top: 25px;
-            color: #ff69b4;
-            font-size: 14px;
-            text-align: center;
-        }
+    footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    padding: 10px 0;
+    background-color: #111;
+    color: #ff69b4;
+    font-size: 14px;
+    border-top: 1px solid #ff69b4;
+}
 
     </style>
 <body>
@@ -141,6 +146,7 @@
     <py-script src="intramsplayers.py"></py-script>
 </body>
 </html>
+
 
 
 
