--- a/index.html
+++ b/index.html
@@ -141,10 +141,15 @@ button {
 }
     
 footer {
-    margin-top: 25px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    padding: 10px 0;
+    background-color: #111;
     color: #ff69b4;
     font-size: 14px;
-    text-align: center;
+    border-top: 1px solid #ff69b4;
 }
 
 </style>
@@ -184,6 +189,7 @@ footer {
 
 </body>
 </html>
+
 
 
 
