--- a/teamchecker.html
+++ b/teamchecker.html
@@ -110,10 +110,15 @@
             box-sizing: border-box;
         }
         footer {
-    margin-top: 25px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    padding: 10px 0;
+    background-color: #111;
     color: #ff69b4;
     font-size: 14px;
-    text-align: center;
+    border-top: 1px solid #ff69b4;
 }
     </style>
 <body>
@@ -166,6 +171,7 @@
     <py-script src="teamchecker.py"></py-script>
 </body>
 </html>
+
 
 
 
