--- a/intramsplayers.html
+++ b/intramsplayers.html
@@ -13,7 +13,7 @@
     <style>
         body{
         color: white;
-        background-color: #1b1b1b;
+        background-color: #111;
         font-family: "Grandstander", cursive;
         font-style: normal;
         padding-top: 110px;
@@ -146,6 +146,7 @@
     <py-script src="intramsplayers.py"></py-script>
 </body>
 </html>
+
 
 
 
