--- a/teamchecker.html
+++ b/teamchecker.html
@@ -14,7 +14,7 @@
     <style>
         body{
         color: white;
-        background-color: #1b1b1b;
+        background-color: #111;
         text-align: center;
         font-family: "Grandstander", cursive;
         font-style: normal;
@@ -171,6 +171,7 @@
     <py-script src="teamchecker.py"></py-script>
 </body>
 </html>
+
 
 
 
